@@ -21,7 +21,9 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.Reader;
 import java.io.StringReader;
+import java.io.UncheckedIOException;
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
@@ -31,11 +33,11 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.Set;
 import java.util.Stack;
 import java.util.UUID;
@@ -44,7 +46,8 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ForkJoinPool;
 import java.util.function.Supplier;
 
-import org.drools.compiler.builder.DroolsAssemblerContext;
+import org.drools.compiler.builder.InternalKnowledgeBuilder;
+import org.drools.compiler.builder.impl.errors.MissingImplementationException;
 import org.drools.compiler.compiler.AnnotationDeclarationError;
 import org.drools.compiler.compiler.BaseKnowledgeBuilderResultImpl;
 import org.drools.compiler.compiler.ConfigurableSeverityResult;
@@ -107,10 +110,9 @@ import org.drools.compiler.rule.builder.RuleBuildContext;
 import org.drools.compiler.rule.builder.RuleBuilder;
 import org.drools.compiler.rule.builder.RuleConditionBuilder;
 import org.drools.compiler.rule.builder.dialect.DialectError;
-import org.drools.compiler.runtime.pipeline.impl.DroolsJaxbHelperProviderImpl;
+import org.drools.core.addon.TypeResolver;
 import org.drools.core.base.ClassFieldAccessorCache;
-import org.drools.core.builder.conf.impl.JaxbConfigurationImpl;
-import org.drools.core.common.ProjectClassLoader;
+import org.drools.core.builder.conf.impl.DecisionTableConfigurationImpl;
 import org.drools.core.definitions.InternalKnowledgePackage;
 import org.drools.core.definitions.impl.KnowledgePackageImpl;
 import org.drools.core.definitions.rule.impl.RuleImpl;
@@ -131,8 +133,11 @@ import org.drools.core.util.DroolsStreamUtils;
 import org.drools.core.util.IoUtils;
 import org.drools.core.util.StringUtils;
 import org.drools.core.xml.XmlChangeSetReader;
+import org.drools.reflective.ComponentsFactory;
+import org.drools.reflective.classloader.ProjectClassLoader;
 import org.kie.api.KieBase;
 import org.kie.api.KieBaseConfiguration;
+import org.kie.api.builder.ReleaseId;
 import org.kie.api.definition.KiePackage;
 import org.kie.api.definition.process.Process;
 import org.kie.api.internal.assembler.KieAssemblers;
@@ -144,10 +149,8 @@ import org.kie.api.io.ResourceType;
 import org.kie.api.io.ResourceWithConfiguration;
 import org.kie.api.runtime.rule.AccumulateFunction;
 import org.kie.internal.ChangeSet;
-import org.kie.internal.builder.AssemblerContext;
 import org.kie.internal.builder.CompositeKnowledgeBuilder;
 import org.kie.internal.builder.DecisionTableConfiguration;
-import org.kie.internal.builder.KnowledgeBuilder;
 import org.kie.internal.builder.KnowledgeBuilderError;
 import org.kie.internal.builder.KnowledgeBuilderErrors;
 import org.kie.internal.builder.KnowledgeBuilderResult;
@@ -157,7 +160,6 @@ import org.kie.internal.builder.ResultSeverity;
 import org.kie.internal.builder.ScoreCardConfiguration;
 import org.kie.internal.io.ResourceFactory;
 import org.kie.internal.io.ResourceWithConfigurationImpl;
-import org.kie.soup.project.datamodel.commons.types.TypeResolver;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.xml.sax.SAXException;
@@ -166,11 +168,7 @@ import static org.drools.core.impl.KnowledgeBaseImpl.registerFunctionClassAndInn
 import static org.drools.core.util.StringUtils.isEmpty;
 import static org.drools.core.util.StringUtils.ucFirst;
 
-public class KnowledgeBuilderImpl implements KnowledgeBuilder,
-                                             DroolsAssemblerContext,
-                                             AssemblerContext {
-
-    private static final String JAVA_ROOT = "src/main/java/";
+public class KnowledgeBuilderImpl implements InternalKnowledgeBuilder {
 
     protected static final transient Logger logger = LoggerFactory.getLogger(KnowledgeBuilderImpl.class);
 
@@ -194,7 +192,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
     private int parallelRulesBuildThreshold;
 
-    private final Map<String, Class<?>> globals = new HashMap<String, Class<?>>();
+    private final Map<String, Class<?>> globals = new HashMap<>();
 
     private Resource resource;
 
@@ -207,18 +205,20 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     //The package level attributes are inherited by individual rules not containing explicit overriding parameters.
     //The map is keyed on the PackageDescr's namespace and contains a map of AttributeDescr's keyed on the
     //AttributeDescr's name.
-    private final Map<String, Map<String, AttributeDescr>> packageAttributes = new HashMap<String, Map<String, AttributeDescr>>();
+    private final Map<String, Map<String, AttributeDescr>> packageAttributes = new HashMap<>();
 
     //PackageDescrs' list of ImportDescrs are kept identical as subsequent PackageDescrs are added.
     private final Map<String, List<PackageDescr>> packages = new ConcurrentHashMap<>();
 
-    private final Stack<List<Resource>> buildResources = new Stack<List<Resource>>();
+    private final Stack<List<Resource>> buildResources = new Stack<>();
 
     private AssetFilter assetFilter = null;
 
     private final TypeDeclarationBuilder typeBuilder;
 
     private Map<String, Object> builderCache;
+
+    private ReleaseId releaseId;
 
     /**
      * Use this when package is starting from scratch.
@@ -269,7 +269,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
         this.parallelRulesBuildThreshold = this.configuration.getParallelRulesBuildThreshold();
 
-        this.results = new ArrayList<KnowledgeBuilderResult>();
+        this.results = new ArrayList<>();
 
         PackageRegistry pkgRegistry = new PackageRegistry(rootClassLoader, this.configuration, pkg);
         pkgRegistry.setDialect(this.defaultDialect);
@@ -282,7 +282,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         }
 
         processBuilder = ProcessBuilderFactory.newProcessBuilder(this);
-        typeBuilder = new TypeDeclarationBuilder(this);
+        this.typeBuilder = createTypeDeclarationBuilder();
     }
 
     public KnowledgeBuilderImpl(InternalKnowledgeBase kBase,
@@ -299,18 +299,33 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
             this.rootClassLoader = this.configuration.getClassLoader();
         }
 
-        // FIXME, we need to get drools to support "default" namespace.
-        //this.defaultNamespace = pkg.getName();
         this.defaultDialect = this.configuration.getDefaultDialect();
 
         this.parallelRulesBuildThreshold = this.configuration.getParallelRulesBuildThreshold();
 
-        this.results = new ArrayList<KnowledgeBuilderResult>();
+        this.results = new ArrayList<>();
 
         this.kBase = kBase;
 
         processBuilder = ProcessBuilderFactory.newProcessBuilder(this);
-        typeBuilder = new TypeDeclarationBuilder(this);
+
+        this.typeBuilder = createTypeDeclarationBuilder();
+    }
+
+    private TypeDeclarationBuilder createTypeDeclarationBuilder() {
+        TypeDeclarationBuilderFactory typeDeclarationBuilderFactory =
+                Optional.ofNullable(ServiceRegistry.getService(TypeDeclarationBuilderFactory.class))
+                        .orElse(new DefaultTypeDeclarationBuilderFactory());
+
+        return typeDeclarationBuilderFactory.createTypeDeclarationBuilder(this);
+    }
+
+    public ReleaseId getReleaseId() {
+        return releaseId;
+    }
+
+    public void setReleaseId(ReleaseId releaseId ) {
+        this.releaseId = releaseId;
     }
 
     Resource getCurrentResource() {
@@ -343,11 +358,9 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
      * @param reader
      * @param sourceResource the source resource for the read artifacts
      * @throws DroolsParserException
-     * @throws IOException
      */
     public void addPackageFromDrl(final Reader reader,
-                                  final Resource sourceResource) throws DroolsParserException,
-            IOException {
+                                  final Resource sourceResource) throws DroolsParserException, IOException {
         this.resource = sourceResource;
         final DrlParser parser = new DrlParser(configuration.getLanguageLevel());
         final PackageDescr pkg = parser.parse(sourceResource, reader);
@@ -371,13 +384,12 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     PackageDescr decisionTableToPackageDescr(Resource resource,
-                                             ResourceConfiguration configuration) throws DroolsParserException,
-            IOException {
+                                             ResourceConfiguration configuration) throws DroolsParserException, IOException {
         DecisionTableConfiguration dtableConfiguration = configuration instanceof DecisionTableConfiguration ?
                 (DecisionTableConfiguration) configuration :
-                null;
+                new DecisionTableConfigurationImpl();
 
-        if (dtableConfiguration != null && !dtableConfiguration.getRuleTemplateConfigurations().isEmpty()) {
+        if (!dtableConfiguration.getRuleTemplateConfigurations().isEmpty()) {
             List<String> generatedDrls = DecisionTableFactory.loadFromInputStreamWithTemplates(resource, dtableConfiguration);
             if (generatedDrls.size() == 1) {
                 return generatedDrlToPackageDescr(resource, generatedDrls.get(0));
@@ -396,6 +408,8 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
             return compositePackageDescr;
         }
 
+        dtableConfiguration.setTrimCell( this.configuration.isTrimCellsInDTable() );
+
         String generatedDrl = DecisionTableFactory.loadFromResource(resource, dtableConfiguration);
         return generatedDrlToPackageDescr(resource, generatedDrl);
     }
@@ -407,9 +421,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         this.resource = null;
     }
 
-    PackageDescr guidedDecisionTableToPackageDescr(Resource resource) throws DroolsParserException,
-            IOException {
+    PackageDescr guidedDecisionTableToPackageDescr(Resource resource) throws DroolsParserException, IOException {
         GuidedDecisionTableProvider guidedDecisionTableProvider = GuidedDecisionTableFactory.getGuidedDecisionTableProvider();
+        if (guidedDecisionTableProvider == null) {
+            throw new MissingImplementationException(resource, "drools-workbench-models-guided-dtable");
+        }
         ResourceConversionResult conversionResult = guidedDecisionTableProvider.loadFromInputStream(resource.getInputStream());
         return conversionResultToPackageDescr(resource, conversionResult);
     }
@@ -437,12 +453,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     private void dumpDrlGeneratedFromDTable(File dumpDir, String generatedDrl, String srcPath) {
-        File dumpFile;
-        if (srcPath != null) {
-            dumpFile = createDumpDrlFile(dumpDir, srcPath, ".drl");
-        } else {
-            dumpFile = createDumpDrlFile(dumpDir, "decision-table-" + UUID.randomUUID(), ".drl");
+        String fileName = srcPath != null ? srcPath : "decision-table-" + UUID.randomUUID();
+        if (releaseId != null) {
+            fileName = releaseId.getGroupId() + "_" + releaseId.getArtifactId() + "_" + fileName;
         }
+        File dumpFile = createDumpDrlFile(dumpDir, fileName, ".drl");
         try {
             IoUtils.write(dumpFile, generatedDrl.getBytes(IoUtils.UTF8_CHARSET));
         } catch (IOException ex) {
@@ -452,7 +467,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         }
     }
 
-    protected static File createDumpDrlFile(File dumpDir, String fileName, String extension) {
+    public static File createDumpDrlFile(File dumpDir, String fileName, String extension) {
         return new File(dumpDir, fileName.replaceAll("[^a-zA-Z0-9\\.\\-_]+", "_") + extension);
     }
 
@@ -491,7 +506,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
         try {
             ResourceWithConfiguration resCon = new ResourceWithConfigurationImpl(res, null, null, null);
-            addPackageForExternalType(ResourceType.PMML,Arrays.asList(resCon));
+            addPackageForExternalType(ResourceType.PMML, Collections.singletonList(resCon));
         } catch (Exception e) {
             throw new DroolsParserException(e);
         }
@@ -504,9 +519,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         this.resource = null;
     }
 
-    PackageDescr templateToPackageDescr(Resource resource) throws DroolsParserException,
-            IOException {
+    PackageDescr templateToPackageDescr(Resource resource) throws DroolsParserException, IOException {
         GuidedRuleTemplateProvider guidedRuleTemplateProvider = GuidedRuleTemplateFactory.getGuidedRuleTemplateProvider();
+        if (guidedRuleTemplateProvider == null) {
+            throw new MissingImplementationException(resource, "drools-workbench-models-guided-template");
+        }
         ResourceConversionResult conversionResult = guidedRuleTemplateProvider.loadFromInputStream(resource.getInputStream());
         return conversionResultToPackageDescr(resource, conversionResult);
     }
@@ -587,17 +604,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         final XmlPackageReader xmlReader = new XmlPackageReader(this.configuration.getSemanticModules());
         xmlReader.getParser().setClassLoader(this.rootClassLoader);
 
-        Reader reader = null;
-        try {
-            reader = resource.getReader();
+        try (Reader reader = resource.getReader()) {
             xmlReader.read(reader);
         } catch (final SAXException e) {
             throw new DroolsParserException(e.toString(),
                                             e.getCause());
-        } finally {
-            if (reader != null) {
-                reader.close();
-            }
         }
         return xmlReader.getPackageDescr();
     }
@@ -644,29 +655,28 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         DefaultExpander expander = getDslExpander();
 
         try {
-            if (expander == null) {
-                expander = new DefaultExpander();
-            }
-            String str = expander.expand(dslrReader);
-            if (expander.hasErrors()) {
-                for (ExpanderException error : expander.getErrors()) {
-                    error.setResource(resource);
-                    addBuilderResult(error);
+            try {
+                if (expander == null) {
+                    expander = new DefaultExpander();
                 }
-            }
+                String str = expander.expand(dslrReader);
+                if (expander.hasErrors()) {
+                    for (ExpanderException error : expander.getErrors()) {
+                        error.setResource(resource);
+                        addBuilderResult(error);
+                    }
+                }
 
-            pkg = parser.parse(resource, str);
-            this.results.addAll(parser.getErrors());
-            hasErrors = parser.hasErrors();
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        } finally {
-            if (dslrReader != null) {
-                try {
+                pkg = parser.parse(resource, str);
+                this.results.addAll(parser.getErrors());
+                hasErrors = parser.hasErrors();
+            } finally {
+                if (dslrReader != null) {
                     dslrReader.close();
-                } catch (IOException e) {
                 }
             }
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
         }
         return hasErrors ? null : pkg;
     }
@@ -675,20 +685,15 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         this.resource = resource;
         DSLTokenizedMappingFile file = new DSLTokenizedMappingFile();
 
-        Reader reader = null;
-        try {
-            reader = resource.getReader();
+        try (Reader reader = resource.getReader()) {
             if (!file.parseAndLoad(reader)) {
                 this.results.addAll(file.getErrors());
             }
             if (this.dslFiles == null) {
-                this.dslFiles = new ArrayList<DSLTokenizedMappingFile>();
+                this.dslFiles = new ArrayList<>();
             }
             this.dslFiles.add(file);
         } finally {
-            if (reader != null) {
-                reader.close();
-            }
             this.resource = null;
         }
     }
@@ -748,7 +753,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
             } else if (ResourceType.CHANGE_SET.equals(type)) {
                 addPackageFromChangeSet(resource);
             } else if (ResourceType.XSD.equals(type)) {
-                addPackageFromXSD(resource, (JaxbConfigurationImpl) configuration);
+                addPackageFromXSD(resource, configuration);
             } else if (ResourceType.SCARD.equals(type)) {
                 addPackageFromScoreCard(resource, configuration);
             } else if (ResourceType.TDRL.equals(type)) {
@@ -773,7 +778,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     void addPackageForExternalType(Resource resource,
                                    ResourceType type,
                                    ResourceConfiguration configuration) throws Exception {
-        KieAssemblers assemblers = ServiceRegistry.getInstance().get(KieAssemblers.class);
+        KieAssemblers assemblers = ServiceRegistry.getService(KieAssemblers.class);
 
         assemblers.addResource(this,
                               resource,
@@ -783,21 +788,14 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
     @Deprecated
     void addPackageForExternalType(ResourceType type, List<ResourceWithConfiguration> resources) throws Exception {
-        KieAssemblers assemblers = ServiceRegistry.getInstance().get(KieAssemblers.class);
+        KieAssemblers assemblers = ServiceRegistry.getService(KieAssemblers.class);
 
         assemblers.addResources(this, resources, type);
     }
 
-    void addPackageFromXSD(Resource resource,
-                           JaxbConfigurationImpl configuration) throws IOException {
+    void addPackageFromXSD(Resource resource, ResourceConfiguration configuration) throws IOException {
         if (configuration != null) {
-            String[] classes = DroolsJaxbHelperProviderImpl.addXsdModel(resource,
-                                                                        this,
-                                                                        configuration.getXjcOpts(),
-                                                                        configuration.getSystemId());
-            for (String cls : classes) {
-                configuration.getClasses().add(cls);
-            }
+            ComponentsFactory.addPackageFromXSD( this, resource, configuration );
         }
     }
 
@@ -811,34 +809,29 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
             reader.setClassLoader(this.configuration.getClassLoader(),
                                   null);
         }
-        Reader resourceReader = null;
-        try {
-            resourceReader = resource.getReader();
+        try (Reader resourceReader = resource.getReader()) {
             ChangeSet changeSet = reader.read(resourceReader);
             if (changeSet == null) {
-                // @TODO should log an error
-            }
-            for (Resource nestedResource : changeSet.getResourcesAdded()) {
-                InternalResource iNestedResourceResource = (InternalResource) nestedResource;
-                if (iNestedResourceResource.isDirectory()) {
-                    for (Resource childResource : iNestedResourceResource.listResources()) {
-                        if (((InternalResource) childResource).isDirectory()) {
-                            continue; // ignore sub directories
+                throw new RuntimeException("ChangeSet cannot be read! " + resource.toString());
+            } else {
+                for (Resource nestedResource : changeSet.getResourcesAdded()) {
+                    InternalResource iNestedResourceResource = (InternalResource) nestedResource;
+                    if (iNestedResourceResource.isDirectory()) {
+                        for (Resource childResource : iNestedResourceResource.listResources()) {
+                            if (((InternalResource) childResource).isDirectory()) {
+                                continue; // ignore sub directories
+                            }
+                            ((InternalResource) childResource).setResourceType(iNestedResourceResource.getResourceType());
+                            addKnowledgeResource(childResource,
+                                                 iNestedResourceResource.getResourceType(),
+                                                 iNestedResourceResource.getConfiguration());
                         }
-                        ((InternalResource) childResource).setResourceType(iNestedResourceResource.getResourceType());
-                        addKnowledgeResource(childResource,
+                    } else {
+                        addKnowledgeResource(iNestedResourceResource,
                                              iNestedResourceResource.getResourceType(),
                                              iNestedResourceResource.getConfiguration());
                     }
-                } else {
-                    addKnowledgeResource(iNestedResourceResource,
-                                         iNestedResourceResource.getResourceType(),
-                                         iNestedResourceResource.getConfiguration());
                 }
-            }
-        } finally {
-            if (resourceReader != null) {
-                resourceReader.close();
             }
         }
     }
@@ -908,19 +901,20 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     /**
-     * This adds a package from a Descr/AST This will also trigger a compile, if
-     * there are any generated classes to compile of course.
+     * Adds a package from a Descr/AST also triggering its compilation
+     * and the generation of the corresponding rete/phreak network
      */
+    @Override
     public void addPackage(final PackageDescr packageDescr) {
-        PackageRegistry pkgRegistry = getOrCreatePackageRegistry(packageDescr);
+        PackageRegistry pkgRegistry = getOrCreatePackageRegistry( packageDescr );
         if (pkgRegistry == null) {
             return;
         }
 
         // merge into existing package
-        mergePackage(pkgRegistry, packageDescr);
+        mergePackage(pkgRegistry, packageDescr );
 
-        compileKnowledgePackages(packageDescr, pkgRegistry);
+        compileKnowledgePackages( packageDescr, pkgRegistry);
         wireAllRules();
         compileRete(packageDescr);
     }
@@ -1000,7 +994,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         InternalKnowledgePackage pkg;
         if (this.kBase == null || (pkg = this.kBase.getPackage(packageDescr.getName())) == null) {
             // there is no rulebase or it does not define this package so define it
-            pkg = new KnowledgePackageImpl(packageDescr.getName());
+            pkg = configuration.getKieComponentFactory().createKnowledgePackage((packageDescr.getName()));
             pkg.setClassFieldAccessorCache(new ClassFieldAccessorCache(this.rootClassLoader));
 
             // if there is a rulebase then add the package.
@@ -1028,13 +1022,20 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         return pkgRegistry;
     }
 
+    public void registerPackage(PackageDescr packageDescr) {
+        if (isEmpty(packageDescr.getNamespace())) {
+            packageDescr.setNamespace(this.configuration.getDefaultPackageName());
+        }
+        initPackage(packageDescr);
+    }
+
     private void initPackage(PackageDescr packageDescr) {
         //Gather all imports for all PackageDescrs for the current package and replicate into
         //all PackageDescrs for the current package, thus maintaining a complete list of
         //ImportDescrs for all PackageDescrs for the current package.
-        List<PackageDescr> packageDescrsForPackage = packages.computeIfAbsent(packageDescr.getName(), k -> new ArrayList<PackageDescr>());
+        List<PackageDescr> packageDescrsForPackage = packages.computeIfAbsent(packageDescr.getName(), k -> new ArrayList<>());
         packageDescrsForPackage.add(packageDescr);
-        Set<ImportDescr> imports = new HashSet<ImportDescr>();
+        Set<ImportDescr> imports = new HashSet<>();
         for (PackageDescr pd : packageDescrsForPackage) {
             imports.addAll(pd.getImports());
         }
@@ -1047,7 +1048,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         if (!packageDescr.getAttributes().isEmpty()) {
             Map<String, AttributeDescr> pkgAttributes = packageAttributes.get(packageDescr.getNamespace());
             if (pkgAttributes == null) {
-                pkgAttributes = new HashMap<String, AttributeDescr>();
+                pkgAttributes = new HashMap<>();
                 this.packageAttributes.put(packageDescr.getNamespace(),
                                            pkgAttributes);
             }
@@ -1118,13 +1119,16 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         }
     }
 
+    private static class ForkJoinPoolHolder {
+        private static ForkJoinPool COMPILER_POOL = new ForkJoinPool(); // avoid common pool
+    }
+
     private void compileRulesLevel(PackageDescr packageDescr, PackageRegistry pkgRegistry, List<RuleDescr> rules) {
         boolean parallelRulesBuild = this.kBase == null && parallelRulesBuildThreshold != -1 && rules.size() > parallelRulesBuildThreshold;
         if (parallelRulesBuild) {
             Map<String, RuleBuildContext> ruleCxts = new ConcurrentHashMap<>();
-            ForkJoinPool pool = new ForkJoinPool(); // avoid common pool
             try {
-                pool.submit(() -> 
+                ForkJoinPoolHolder.COMPILER_POOL.submit(() ->
                 rules.stream().parallel()
                         .filter(ruleDescr -> filterAccepts(ResourceChange.Type.RULE, ruleDescr.getNamespace(), ruleDescr.getName()))
                         .forEach(ruleDescr -> {
@@ -1139,7 +1143,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
                             }
                         })
                 ).get();
-            } catch (InterruptedException | ExecutionException e) { 
+            } catch (InterruptedException | ExecutionException e) {
                 throw new RuntimeException("Rules compilation failed or interrupted", e);
             }
             for (RuleDescr ruleDescr : rules) {
@@ -1176,11 +1180,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     private List<? extends KnowledgeBuilderResult> addRule(RuleBuildContext context) {
         return System.getSecurityManager() == null ?
                 internalAddRule(context) :
-                AccessController.<List<? extends KnowledgeBuilderResult>>doPrivileged( new PrivilegedAction() {
-                    public List<? extends KnowledgeBuilderResult> run() {
-                        return internalAddRule(context);
-                    }
-                });
+                AccessController.<List<? extends KnowledgeBuilderResult>>doPrivileged((PrivilegedAction) () -> internalAddRule(context));
     }
 
     private List<? extends KnowledgeBuilderResult> internalAddRule(RuleBuildContext context) {
@@ -1270,7 +1270,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     private Map<String, RuleBuildContext> buildRuleBuilderContexts(List<RuleDescr> rules, PackageRegistry pkgRegistry) {
-        Map<String, RuleBuildContext> map = new HashMap<String, RuleBuildContext>();
+        Map<String, RuleBuildContext> map = new HashMap<>();
         for (RuleDescr ruleDescr : rules) {
             RuleBuildContext context = buildRuleBuilderContext(pkgRegistry, ruleDescr);
             map.put(ruleDescr.getName(), context);
@@ -1300,11 +1300,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
         InternalKnowledgePackage pkg = pkgRegistry.getPackage();
 
-        List<RuleDescr> roots = new LinkedList<RuleDescr>();
-        Map<String, List<RuleDescr>> children = new HashMap<String, List<RuleDescr>>();
-        LinkedHashMap<String, RuleDescr> sorted = new LinkedHashMap<String, RuleDescr>();
-        List<RuleDescr> queries = new ArrayList<RuleDescr>();
-        Set<String> compiledRules = new HashSet<String>();
+        List<RuleDescr> roots = new LinkedList<>();
+        Map<String, List<RuleDescr>> children = new HashMap<>();
+        LinkedHashMap<String, RuleDescr> sorted = new LinkedHashMap<>();
+        List<RuleDescr> queries = new ArrayList<>();
+        Set<String> compiledRules = new HashSet<>();
 
         for (RuleDescr ruleDescr : packageDescr.getRules()) {
             if (ruleDescr.isQuery()) {
@@ -1412,14 +1412,14 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
     private void manageUnresolvedExtension(RuleDescr ruleDescr,
                                            Collection<RuleDescr> candidates) {
-        List<String> candidateRules = new LinkedList<String>();
+        List<String> candidateRules = new LinkedList<>();
         for (RuleDescr r : candidates) {
             if (StringUtils.stringSimilarity(ruleDescr.getParentName(), r.getName(), StringUtils.SIMILARITY_STRATS.DICE) >= 0.75) {
                 candidateRules.add(r.getName());
             }
         }
         String msg = "Unresolved parent name " + ruleDescr.getParentName();
-        if (candidateRules.size() > 0) {
+        if (!candidateRules.isEmpty()) {
             msg += " >> did you mean any of :" + candidateRules;
         }
         results.add(new RuleBuildError(ruleDescr.toRule(), ruleDescr, msg,
@@ -1529,29 +1529,21 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         final Map<String, ImportDeclaration> imports = pkg.getImports();
         imports.putAll(newPkg.getImports());
 
-        String lastType = null;
-        try {
-            // merge globals
-            if (newPkg.getGlobals() != null && newPkg.getGlobals() != Collections.EMPTY_MAP) {
-                Map<String, String> globals = pkg.getGlobals();
-                // Add globals
-                for (final Map.Entry<String, String> entry : newPkg.getGlobals().entrySet()) {
-                    final String identifier = entry.getKey();
-                    final String type = entry.getValue();
-                    lastType = type;
-                    if (globals.containsKey(identifier) && !globals.get(identifier).equals(type)) {
-                        throw new RuntimeException(pkg.getName() + " cannot be integrated");
-                    } else {
-                        pkg.addGlobal(identifier,
-                                      this.rootClassLoader.loadClass(type));
-                        // this isn't a package merge, it's adding to the rulebase, but I've put it here for convenience
-                        this.globals.put(identifier,
-                                         this.rootClassLoader.loadClass(type));
-                    }
+        // merge globals
+        if (newPkg.getGlobals() != null && !newPkg.getGlobals().isEmpty()) {
+            Map<String, Class<?>> pkgGlobals = pkg.getGlobals();
+            // Add globals
+            for (final Map.Entry<String, Class<?>> entry : newPkg.getGlobals().entrySet()) {
+                final String identifier = entry.getKey();
+                final Class<?> type = entry.getValue();
+                if (pkgGlobals.containsKey(identifier) && !pkgGlobals.get(identifier).equals(type)) {
+                    throw new RuntimeException(pkg.getName() + " cannot be integrated");
+                } else {
+                    pkg.addGlobal(identifier, type);
+                    // this isn't a package merge, it's adding to the rulebase, but I've put it here for convenience
+                    this.globals.put(identifier, type );
                 }
             }
-        } catch (ClassNotFoundException e) {
-            throw new RuntimeException("Unable to resolve class '" + lastType + "'");
         }
 
         // merge the type declarations
@@ -1581,7 +1573,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     protected void validateUniqueRuleNames(final PackageDescr packageDescr) {
-        final Set<String> names = new HashSet<String>();
+        final Set<String> names = new HashSet<>();
         PackageRegistry packageRegistry = this.pkgRegistryMap.get(packageDescr.getNamespace());
         InternalKnowledgePackage pkg = null;
         if (packageRegistry != null) {
@@ -1643,9 +1635,9 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         processAccumulateFunctions(pkgRegistry, packageDescr);
         processEntryPointDeclarations(pkgRegistry, packageDescr);
 
-        Map<String, AbstractClassTypeDeclarationDescr> unprocesseableDescrs = new HashMap<String, AbstractClassTypeDeclarationDescr>();
-        List<TypeDefinition> unresolvedTypes = new ArrayList<TypeDefinition>();
-        List<AbstractClassTypeDeclarationDescr> unsortedDescrs = new ArrayList<AbstractClassTypeDeclarationDescr>();
+        Map<String, AbstractClassTypeDeclarationDescr> unprocesseableDescrs = new HashMap<>();
+        List<TypeDefinition> unresolvedTypes = new ArrayList<>();
+        List<AbstractClassTypeDeclarationDescr> unsortedDescrs = new ArrayList<>();
         unsortedDescrs.addAll(packageDescr.getTypeDeclarations());
         unsortedDescrs.addAll(packageDescr.getEnumDeclarations());
 
@@ -1658,16 +1650,16 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         normalizeRuleAnnotations(packageDescr, pkgRegistry.getTypeResolver());
     }
 
-    void processOtherDeclarations(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
+    protected void processOtherDeclarations(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
         processAccumulateFunctions(pkgRegistry, packageDescr);
         processWindowDeclarations(pkgRegistry, packageDescr);
         processFunctions(pkgRegistry, packageDescr);
         processGlobals(pkgRegistry, packageDescr);
     }
 
-    private void processGlobals(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
+    protected void processGlobals(PackageRegistry pkgRegistry, PackageDescr packageDescr) {
         InternalKnowledgePackage pkg = pkgRegistry.getPackage();
-        Set<String> existingGlobals = new HashSet<String>(pkg.getGlobals().keySet());
+        Set<String> existingGlobals = new HashSet<>(pkg.getGlobals().keySet());
 
         for (final GlobalDescr global : packageDescr.getGlobals()) {
             final String identifier = global.getIdentifier();
@@ -1692,7 +1684,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
                 }
             } catch (final ClassNotFoundException e) {
                 addBuilderResult(new GlobalError(global, e.getMessage()));
-                e.printStackTrace();
+                logger.warn("ClassNotFoundException occured!", e);
             }
         }
 
@@ -1706,7 +1698,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         }
     }
 
-    private void processAccumulateFunctions(PackageRegistry pkgRegistry,
+    protected void processAccumulateFunctions(PackageRegistry pkgRegistry,
                                             PackageDescr packageDescr) {
         for (final AccumulateImportDescr aid : packageDescr.getAccumulateImports()) {
             AccumulateFunction af = loadAccumulateFunction(pkgRegistry,
@@ -1722,11 +1714,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
                                                       String className) {
         try {
             Class<? extends AccumulateFunction> clazz = (Class<? extends AccumulateFunction>) pkgRegistry.getTypeResolver().resolveType(className);
-            return clazz.newInstance();
+            return clazz.getConstructor().newInstance();
         } catch (ClassNotFoundException e) {
             throw new RuntimeException("Error loading accumulate function for identifier " + identifier + ". Class " + className + " not found",
                                        e);
-        } catch (InstantiationException e) {
+        } catch (InstantiationException | NoSuchMethodException | InvocationTargetException e) {
             throw new RuntimeException("Error loading accumulate function for identifier " + identifier + ". Instantiation failed for class " + className,
                                        e);
         } catch (IllegalAccessException e) {
@@ -1735,7 +1727,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         }
     }
 
-    private void processFunctions(PackageRegistry pkgRegistry,
+    protected void processFunctions(PackageRegistry pkgRegistry,
                                   PackageDescr packageDescr) {
         for (FunctionDescr function : packageDescr.getFunctions()) {
             Function existingFunc = pkgRegistry.getPackage().getFunctions().get(function.getName());
@@ -1773,7 +1765,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         }
     }
 
-    private void processWindowDeclarations(PackageRegistry pkgRegistry,
+    protected void processWindowDeclarations(PackageRegistry pkgRegistry,
                                            PackageDescr packageDescr) {
         for (WindowDeclarationDescr wd : packageDescr.getWindowDeclarations()) {
             WindowDeclaration window = new WindowDeclaration(wd.getName(), packageDescr.getName());
@@ -1836,7 +1828,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         Dialect dialect = pkgRegistry.getDialectCompiletimeRegistry().getDialect(functionDescr.getDialect());
         dialect.postCompileAddFunction(functionDescr, pkgRegistry.getTypeResolver());
 
-        if (rootClassLoader instanceof ProjectClassLoader) {
+        if (rootClassLoader instanceof ProjectClassLoader ) {
             String functionClassName = functionDescr.getClassName();
             JavaDialectRuntimeData runtime = ((JavaDialectRuntimeData) pkgRegistry.getDialectRuntimeRegistry().getDialectData("java"));
             try {
@@ -1880,8 +1872,10 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         return this.pkgRegistryMap.get(name);
     }
 
+    @Override
     public InternalKnowledgePackage getPackage(String name) {
-        return this.pkgRegistryMap.get(name).getPackage();
+        PackageRegistry registry = this.pkgRegistryMap.get(name);
+        return registry == null ? null : registry.getPackage();
     }
 
     public Map<String, PackageRegistry> getPackageRegistry() {
@@ -1934,7 +1928,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
     private List<KnowledgeBuilderResult> getResultList(ResultSeverity... severities) {
         List<ResultSeverity> typesToFetch = Arrays.asList(severities);
-        ArrayList<KnowledgeBuilderResult> problems = new ArrayList<KnowledgeBuilderResult>();
+        ArrayList<KnowledgeBuilderResult> problems = new ArrayList<>();
         for (KnowledgeBuilderResult problem : results) {
             if (typesToFetch.contains(problem.getSeverity())) {
                 problems.add(problem);
@@ -1948,7 +1942,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     private List<DroolsError> getErrorList() {
-        List<DroolsError> errors = new ArrayList<DroolsError>();
+        List<DroolsError> errors = new ArrayList<>();
         for (KnowledgeBuilderResult problem : results) {
             if (problem.getSeverity() == ResultSeverity.ERROR) {
                 if (problem instanceof ConfigurableSeverityResult) {
@@ -1970,7 +1964,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     public List<DroolsWarning> getWarnings() {
-        List<DroolsWarning> warnings = new ArrayList<DroolsWarning>();
+        List<DroolsWarning> warnings = new ArrayList<>();
         for (KnowledgeBuilderResult problem : results) {
             if (problem.getSeverity() == ResultSeverity.WARNING) {
                 if (problem instanceof ConfigurableSeverityResult) {
@@ -2007,16 +2001,16 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
      * there were errors on items that a rule depends on (eg functions), then
      * you will get spurious errors which will not be that helpful.
      */
-    protected void resetErrors() {
+    public void resetErrors() {
         resetProblemType(ResultSeverity.ERROR);
     }
 
-    protected void resetWarnings() {
+    public void resetWarnings() {
         resetProblemType(ResultSeverity.WARNING);
     }
 
     private void resetProblemType(ResultSeverity problemType) {
-        List<KnowledgeBuilderResult> toBeDeleted = new ArrayList<KnowledgeBuilderResult>();
+        List<KnowledgeBuilderResult> toBeDeleted = new ArrayList<>();
         for (KnowledgeBuilderResult problem : results) {
             if (problemType != null && problemType.equals(problem.getSeverity())) {
                 toBeDeleted.add(problem);
@@ -2025,7 +2019,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         this.results.removeAll(toBeDeleted);
     }
 
-    protected void resetProblems() {
+    public void resetProblems() {
         this.results.clear();
         if (this.processBuilder != null) {
             this.processBuilder.getErrors().clear();
@@ -2038,7 +2032,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
     public static class MissingPackageNameException extends IllegalArgumentException {
 
-        private static final long serialVersionUID = 510l;
+        private static final long serialVersionUID = 510L;
 
         public MissingPackageNameException(final String message) {
             super(message);
@@ -2078,15 +2072,9 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
             reader.setClassLoader(this.configuration.getClassLoader(),
                                   null);
         }
-        Reader resourceReader = null;
 
-        try {
-            resourceReader = resource.getReader();
+        try (Reader resourceReader = resource.getReader()) {
             return reader.read(resourceReader);
-        } finally {
-            if (resourceReader != null) {
-                resourceReader.close();
-            }
         }
     }
 
@@ -2100,17 +2088,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         if (ResourceType.CHANGE_SET == type) {
             try {
                 ChangeSet changeSet = parseChangeSet(resource);
-                List<Resource> resources = new ArrayList<Resource>();
+                List<Resource> resources = new ArrayList<>();
                 resources.add(resource);
-                for (Resource addedRes : changeSet.getResourcesAdded()) {
-                    resources.add(addedRes);
-                }
-                for (Resource modifiedRes : changeSet.getResourcesModified()) {
-                    resources.add(modifiedRes);
-                }
-                for (Resource removedRes : changeSet.getResourcesRemoved()) {
-                    resources.add(removedRes);
-                }
+                resources.addAll(changeSet.getResourcesAdded());
+                resources.addAll(changeSet.getResourcesModified());
+                resources.addAll(changeSet.getResourcesRemoved());
                 buildResources.push(resources);
             } catch (Exception e) {
                 results.add(new DroolsError() {
@@ -2144,31 +2126,19 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
     public ResourceRemovalResult removeObjectsGeneratedFromResource(Resource resource) {
         boolean modified = false;
-        if (pkgRegistryMap != null) {
-            for (PackageRegistry packageRegistry : pkgRegistryMap.values()) {
-                modified = packageRegistry.removeObjectsGeneratedFromResource(resource) || modified;
-            }
+        for (PackageRegistry packageRegistry : pkgRegistryMap.values()) {
+            modified = packageRegistry.removeObjectsGeneratedFromResource(resource) || modified;
         }
 
         if (results != null) {
-            Iterator<KnowledgeBuilderResult> i = results.iterator();
-            while (i.hasNext()) {
-                if (resource.equals(i.next().getResource())) {
-                    i.remove();
-                }
-            }
+            results.removeIf(knowledgeBuilderResult -> resource.equals(knowledgeBuilderResult.getResource()));
         }
 
         if (processBuilder != null && processBuilder.getErrors() != null) {
-            Iterator<? extends KnowledgeBuilderResult> i = processBuilder.getErrors().iterator();
-            while (i.hasNext()) {
-                if (resource.equals(i.next().getResource())) {
-                    i.remove();
-                }
-            }
+            processBuilder.getErrors().removeIf(knowledgeBuilderResult -> resource.equals(knowledgeBuilderResult.getResource()));
         }
 
-        if (results.size() == 0) {
+        if (results != null && results.size() == 0) {
             // TODO Error attribution might be bugged
             for (PackageRegistry packageRegistry : pkgRegistryMap.values()) {
                 packageRegistry.getPackage().resetErrors();
@@ -2190,42 +2160,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         return new ResourceRemovalResult(modified, removedTypes);
     }
 
-
-    public static class ResourceRemovalResult {
-        private boolean modified;
-        private Collection<String> removedTypes;
-
-        public ResourceRemovalResult(  ) {
-            this( false, Collections.emptyList() );
-        }
-
-        public ResourceRemovalResult( boolean modified, Collection<String> removedTypes ) {
-            this.modified = modified;
-            this.removedTypes = removedTypes;
-        }
-
-        public void add(ResourceRemovalResult other) {
-            mergeModified( other.modified );
-            if (this.removedTypes.isEmpty()) {
-                this.removedTypes = other.removedTypes;
-            } else {
-                this.removedTypes.addAll( other.removedTypes );
-            }
-        }
-
-        public void mergeModified( boolean otherModified ) {
-            this.modified = this.modified || otherModified;
-        }
-
-        public boolean isModified() {
-            return modified;
-        }
-
-        public Collection<String> getRemovedTypes() {
-            return removedTypes;
-        }
-    }
-
+    @Override
     public void rewireAllClassObjectTypes() {
         if (kBase != null) {
             for (InternalKnowledgePackage pkg : kBase.getPackagesMap().values()) {
@@ -2274,11 +2209,11 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     @Override
     public Collection<KiePackage> getKnowledgePackages() {
         if (hasErrors()) {
-            return new ArrayList<KiePackage>(0);
+            return new ArrayList<>(0);
         }
 
         InternalKnowledgePackage[] pkgs = getPackages();
-        List<KiePackage> list = new ArrayList<KiePackage>(pkgs.length);
+        List<KiePackage> list = new ArrayList<>(pkgs.length);
 
         Collections.addAll(list, pkgs);
 
@@ -2291,7 +2226,7 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
 
     public KieBase newKnowledgeBase(KieBaseConfiguration conf) {
         KnowledgeBuilderErrors errors = getErrors();
-        if (errors.size() > 0) {
+        if (!errors.isEmpty()) {
             for (KnowledgeBuilderError error : errors) {
                 logger.error(error.toString());
             }
@@ -2471,6 +2406,8 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
         buildRules(packages);
     }
 
+    public void postBuild() { }
+
     public void buildPackagesWithoutRules(Collection<CompositePackageDescr> packages ) {
         initPackageRegistries(packages);
         normalizeTypeAnnotations( packages );
@@ -2508,16 +2445,12 @@ public class KnowledgeBuilderImpl implements KnowledgeBuilder,
     }
 
     protected void buildTypeDeclarations( Collection<CompositePackageDescr> packages ) {
-        Map<String,AbstractClassTypeDeclarationDescr> unprocesseableDescrs = new HashMap<String,AbstractClassTypeDeclarationDescr>();
-        List<TypeDefinition> unresolvedTypes = new ArrayList<TypeDefinition>();
-        List<AbstractClassTypeDeclarationDescr> unsortedDescrs = new ArrayList<AbstractClassTypeDeclarationDescr>();
+        Map<String,AbstractClassTypeDeclarationDescr> unprocesseableDescrs = new HashMap<>();
+        List<TypeDefinition> unresolvedTypes = new ArrayList<>();
+        List<AbstractClassTypeDeclarationDescr> unsortedDescrs = new ArrayList<>();
         for (CompositePackageDescr packageDescr : packages) {
-            for (TypeDeclarationDescr typeDeclarationDescr : packageDescr.getTypeDeclarations()) {
-                unsortedDescrs.add( typeDeclarationDescr );
-            }
-            for (EnumDeclarationDescr enumDeclarationDescr : packageDescr.getEnumDeclarations()) {
-                unsortedDescrs.add( enumDeclarationDescr );
-            }
+            unsortedDescrs.addAll(packageDescr.getTypeDeclarations());
+            unsortedDescrs.addAll(packageDescr.getEnumDeclarations());
         }
 
         getTypeBuilder().processTypeDeclarations( packages, unsortedDescrs, unresolvedTypes, unprocesseableDescrs );
